# skia_rust_ui

./: Cargo.toml  README.md
examples/: basic_demo.rs  render_text_demo.rs
src/: lib.rs
src/core/: mod.rs
src/core/event/: hit_testing.rs  mod.rs
src/core/layout/: flex.rs  mod.rs
src/core/rendering/: mod.rs  pipeline.rs  skia_renderer.rs
src/core/state/: mod.rs  store.rs
src/widget/: mod.rs  text_widget.rs
tests/: event_tests.rs  layout_tests.rs  rendering_pipeline_tests.rs  state_tests.rs
